<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.neocampus.alertocampus.activities.MaterielActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:text="@string/titlepart1"
                style="@style/styletitre2"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:text="@string/titlepart2"
                android:textColor="@color/colorfonttitremenu"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/titlepart3"
                style="@style/styletitre2"
                android:textAlignment="center"
                android:textSize="45sp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/head_materiel"
            android:textAlignment="center"
            style="@style/styletitre1"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/selection_composant" />

        <Spinner
            android:id="@+id/spinner_materiel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:id="@+id/radioboutons">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1_pb_materiel"
                android:text="@string/manquant"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:onClick="btnClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2_pb_materiel"
                android:text="@string/defectueux"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:onClick="btnClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio3_pb_materiel"
                android:text="@string/incident_antre"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:onClick="btnClicked" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:id="@+id/texte_pb_materiel"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/edittext_pb_materiel"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/texte_champs_obligatoires" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/precedent"
                android:id="@+id/precedent"
                android:background="@drawable/buttonstyle"
                android:onClick="precedent"
                android:layout_weight="1" />

            <Button
                android:layout_marginTop="25dp"
                android:id="@+id/scanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttonstyle"
                android:onClick="suivant"
                android:text="@string/suivant"
                android:textColor="#070707"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/apropos"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/nomaproposlien"
                android:textAlignment="center"
                android:onClick="btnapropos"
                android:textColor="#000" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/apropos"
                android:gravity="center">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="3dp"
                    app:srcCompat="@drawable/neocampus_logo"
                    android:onClick="btnapropos" />

                <ImageView
                    android:id="@+id/logoups"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    app:srcCompat="@drawable/upslogo"
                    android:onClick="btnapropos" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>